# ftw-inference-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  pyproject.toml  run.py  test_gpu.py
.github/workflows/: ci.yml
server/: env.yml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  start-local.ps1
server/app/: __init__.py  main.py
server/app/api/: __init__.py  endpoints.py
server/app/api/v1/: __init__.py  dependencies.py  endpoints.py  feedback.py
server/app/benchmark/: __init__.py  download.py  manifest.py  metrics.py  pipeline.py  stac_search.py
server/app/benchmark/data/: ftw_countries.json
server/app/core/: __init__.py  auth.py  config.py  config_validator.py  file_manager.py  geo.py  inference.py  inference_update.py  limiter.py  logging.py  middleware.py  processing.py  queue.py  secrets.py  storage.py  task_manager.py  task_processors.py  tasks.py  types.py  utils.py
server/app/db/: __init__.py  database.py  models.py  protocols.py
server/app/db/utils/: pendulum_types.py
server/app/ml/: __init__.py  commands.py  pipeline.py  validation.py
server/app/models/: __init__.py  example.py  project.py
server/app/schemas/: __init__.py  feedback.py  parameters.py  project.py  requests.py  responses.py
server/app/services/: __init__.py  cache_service.py  inference_service.py  project_service.py  task_service.py
server/app/utils/: name_generator.py
server/config/: base.toml  config.yaml
server/data/models/: README.md
server/test/: conftest.py  test_api.py  test_async_endpoints.py  test_file_manager.py  test_task_manager.py
server/tests/: conftest.py  test_api.py  test_area_limits.py  test_benchmark_metrics.py  test_cache_integration.py  test_cache_service.py  test_feedback.py  test_model_validation.py  test_name_generator.py  test_source_coop.py  test_storage_integration.py  test_workflows.py
specification/: openapi.yaml
