[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["server"]

[project]
name = "ftw-inference-api"
version = "0.1.0"
authors = [
  {name = "Fields of the World", email = "info@fieldsoftheworld.org"},
]
description = "FastAPI implementation of the Fields of the World Inference API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "ftw-tools>=1.2.0",
    "pendulum>=3.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.3.2",
    "ruff>=0.2.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12.11",
]

[project.urls]
"Homepage" = "https://github.com/fieldsoftheworld/ftw-inference-api"
"Bug Tracker" = "https://github.com/fieldsoftheworld/ftw-inference-api/issues"

[tool.pytest.ini_options]
testpaths = ["server/test"]

[tool.ruff]
# Enable recommended rules
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]

line-length = 88
target-version = "py311"
lint.pydocstyle.convention = "google"
# Exclude specific directories
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "*.pyc",
    ".venv",
    "venv",
    ".env",
    "env",
    "node_modules",
]

# Handle unused imports/variables
lint.ignore = [
    "B008",  # todo: check later
]

[tool.ruff.format]
# Use double quotes for consistency
quote-style = "double"
# Line endings
line-ending = "auto"
# Match style
preview = true
