[project]
name = "ftw-inference-api"
version = "0.1.0"
description = "FastAPI implementation of the Fields of the World Inference API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Fields of the World", email = "info@fieldsoftheworld.org"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Framework :: FastAPI",
]

dependencies = [
    "ftw-tools[all]>=2.0.0b2",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "aiofiles>=23.0.0",
    "aioboto3>=14.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "pendulum>=3.0.0",
    "pynamodb>=6.1.0,<7",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "watchtower>=3.4.0",
]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "*.pyc",
    ".venv",
    "venv",
    ".env",
    "env",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]
ignore = [
    "B008",  # Needed for FastAPI DI `Depends()`
]
pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
preview = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "^server/tests/.*$"
]

[[tool.mypy.overrides]]
module = "ftw_tools.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["server/tests"]
skips = ["B101"]

[tool.coverage.run]
source = ["app"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.xml]
output = "coverage.xml"

# UV dependency groups (PEP 735)
[dependency-groups]
dev = [
    # Testing
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.21.0",
    "pytest-aioboto3>=0.2.0",
    "httpx>=0.24.0",
    "moto>=5.1.9,<6",
    # Linting & Type checking
    "ruff>=0.7",
    "mypy>=1.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.12.11",
    "types-aiofiles>=24.1.0",
    "types-python-jose>=3.5.0.20250531",
    "types-aioboto3>=13.0.0",
]
